# cicd

./: .gitignore  GETTING_STARTED.txt  LAB_MANUAL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  init_git.bat  init_git.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  matrix.yml  release.yml  scheduled.yml
calculator/: __init__.py  calculator.py
tests/: test_calculator.py
